updated the Makefile because it was annoying me

--- a/m2/Makefile
+++ b/m2/Makefile
@@ -6,19 +6,17 @@ CFLAGS = -ansi -c
 AS = as86
 LD = ld86
 
-NEWFLOPPY = dd if=/dev/zero of=floppya.img bs=512 count=2880
-
 all: floppya.img
 
 #makes a new floppy if one doesn't exist
 floppya.img::
-	[ -r floppya.img ] || $(NEWFLOPPY);
-	dd if=message.txt of=floppya.img bs=512 count=1 seek=30 conv=notrunc
+	if ! [ -e floppya.img ]; then \
+		dd if=/dev/zero of=floppya.img bs=512 count=2880; \
+		dd if=message.txt of=floppya.img bs=512 count=1 seek=30 conv=notrunc; \
+	fi
 
 bootload: bootload.asm
 	nasm bootload.asm
-
-write_bootload: floppya.img
 
 floppya.img:: bootload
 	dd if=bootload of=floppya.img bs=512 count=1 conv=notrunc
@@ -30,13 +28,8 @@ kernel: kernel.c kernel_asm.o functions.o
 kernel_asm.o: kernel.asm
 	$(AS) kernel.asm -o kernel_asm.o
 
-write_kernel: floppya.img
-
 floppya.img:: kernel
 	dd if=kernel of=floppya.img bs=512 conv=notrunc seek=3
-
-clean_floppy:
-	$(NEWFLOPPY)
 
 functions.o: functions.c functions.h
 	$(CC) $(CFLAGS) functions.c
